# award-engine-poc

./: Cargo.toml  README.md  ralph-all.sh  ralph.sh
benches/: calculation_benchmarks.rs
config/ma000018/: award.yaml  classifications.yaml  penalties.yaml
config/ma000018/rates/: 2025-07-01.yaml
epics/: epic1_foundation_progress.txt  epic1_foundation_spec.md  epic2_base_rate_progress.txt  epic2_base_rate_spec.md  epic3_weekend_penalties_progress.txt  epic3_weekend_penalties_spec.md  epic4_overtime_progress.txt  epic4_overtime_spec.md  epic5_allowances_progress.txt  epic5_allowances_spec.md  epic6_api_progress.txt  epic6_api_spec.md
src/: error.rs  lib.rs
src/api/: handlers.rs  mod.rs  request.rs  response.rs  state.rs
src/calculation/: base_rate.rs  casual_loading.rs  daily_overtime.rs  day_detection.rs  laundry_allowance.rs  mod.rs  ordinary_hours.rs  overnight_shift.rs  overtime_audit.rs  saturday_penalty.rs  sunday_penalty.rs  weekday_overtime.rs  weekend_overtime.rs
src/config/: loader.rs  mod.rs  types.rs
src/models/: calculation_result.rs  employee.rs  mod.rs  pay_period.rs  shift.rs
tests/: integration.rs
